 o panel.mapplot() now takes an 'exact' argument, similar to map().

 o new function panel.key().

 o c.trellis() and doubleYScale() now merge legends from multiple plots.

 o c.trellis(), as.layer() and doubleYScale() now try to combine 
   'par.settings' from multiple plots.

 o doubleYScale() now accepts an 'under' argument (applies to 2nd plot).

 o marginal.plot() now has a default cut = 0.

 o as.layer() was not keeping existing scales if x.same or y.same = FALSE.

 o the 'style' argument to layer() now applies to the "superpose" styles
   also, which fixes some cases with xyplot.ts.

 o the 'zoo' methods for panel.xblocks() and panel.xyarea() now use 
   coredata() rather than as.vector(), so can keep factors intact.

Changes in Version 0.6-10

 o support arrows with panel.segplot.

 o several changes to panel.xblocks().

 o layer() now has a 'magicdots' argument, which is TRUE by default.

 o use of the 'eval' and 'etc' arguments to layer() are now deprecated.

 o new function simpleSmoothTs (calculations as in panel.tskernel).

 o panel.tskernel() gains a new argument 'n' (default 300) to reduce the
   number of plotted points.

 o panel.qqmath.tails() is now deprecated as its main functionality
   has been moved into panel.qqmath() (in lattice 0.18-4, from R 2.11.0).

 o glayer() was failing on plots with an existing 'panel.groups'.

 o panel.smoother() now omits non-finite values and converts to numeric.

 o panel.xyarea() (and thus horizonplot()) now handles missing values.

Changes in Version 0.6-6

 o xyplot.ts actually removed now (forgot to delete it after lattice release).
 
 o new function horizonplot().

 o fixed rescaling bug in panel.tskernel(..., sides = 1).

 o mapplot can now take colramp = NULL to use the current theme.

Changes in Version 0.6-5

 o new panel functions panel.smoother() and panel.quantile().
   The latter requires the quantreg package.

 o new panel function panel.tskernel().
